--- a/5_risultati.tex
+++ b/5_risultati.tex
@@ -1,6 +1,7 @@
 \chapter{Risultati}
 In questo capitolo, ci si è occupati di eseguire i test delle metriche sul Wi-Fi Direct, in due tipologie ambientali: Indoor e Outdoor. 
 Nei test eseguiti, è stato riscontrato che nel caso outdoor, i due smartphone hanno una portata di ricezione massima fino a 80 metri, mentre nei test indoor fino a 20 metri.
+\newpage
 
 \section{Analisi 1: Packet Delivery Ratio}
 
@@ -22,6 +23,7 @@ Ambiente Outdoor:
 
 Nel caso dell'ambiente outdoor, possiamo notare in figura \ref{pdr_outdoor_img} come invece la situazione tenda a migliorare, riuscendo a raggiungere una distanza di trasferimento e ricezione massima di 80 metri.
 Nel caso outdoor è stata prestata molta attenzione nell'eseguire i test senza alcun tipo di ostacolo tra i due dispositivi.
+\newpage
 
 \section{Analisi 2: Throughput}
 
@@ -68,6 +70,7 @@ Ambiente Outdoor:
 \end{center}
 
 Nella figura \ref{discoverytimeoutdoornogo_img} si nota invece un discreto miglioramento per quanto riguarda l'associazione tra 2 e 3 dispositivi, mentre invece la situazione rimane tale per il caso dei 4 dispositivi.
+\newpage
 
 \subsection{Discovery Time with Group Owner (GO)}
 
@@ -78,6 +81,7 @@ Ambiente Indoor:
 \end{center}
 
 Come possiamo notare dalla figura \ref{discoverytimeindoorwithgo_img}, possiamo notare miglioramenti rispetto al test di prima con una probabilità di successo di associazione di 0.8 a 5 secondi per 2 dispositivi, mentre invece di 0.6 a 15 secondi per 3 dispositivi, per il caso di 4 dispositivi invece si rimane sempre sullo 0.4.
+\newpage
 
 Ambiente Outdoor:
 \begin{center}
@@ -86,6 +90,7 @@ Ambiente Outdoor:
 \end{center}
 
 Dalla figura \ref{discoverytimeoutdoorwithgo_img}, possiamo notare che anche nel caso Outdoor si sono presentati notevoli miglioramenti, con una probabilità di successo di 0.9 a 5 secondi per il caso di 2 dispositivi, sempre una probabilità di successo dello 0.6 ma stavolta a 9 secondi, mentre invece per il caso di 4 dispositivi rimane sempre allo 0.4.
+\newpage
 
 Quindi, riassumendo tutti e 4 i grafici in uno solo:
 \begin{center}
