--- a/6_conclusioni.tex
+++ b/6_conclusioni.tex
@@ -11,10 +11,7 @@ Inoltre si è constatato anche che il numero massimo di dispositivi associabili 
 
 \section{Sviluppi Futuri}
 
-Visto i risultati che sono stati ottenuti, si potrebbe pensare di approfondire alcuni concetti per l'impiego di tale tecnologia:
-
-- Uso di tale tecnologia in ambito Videogames.
-
-- Eseguire studi più approfonditi, per un uso in mobilità.
+Visto i risultati che sono stati ottenuti, si potrebbe pensare di approfondire alcuni concetti per l'impiego di tale tecnologia, come per esempio l'uso in ambito Videogames, per permettere partite fino a 4 Giocatori create in Locale.
+Oppure cercare di ottimizzare tale tecnologia per un uso ottimale in mobilità.
 
 \clearpage{\pagestyle{empty}\cleardoublepage}
